# Aperture

./: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260329_01_initial.py  20260329_02_sales_tasks.py  20260331_04_google_maps_web_source.py
backend/app/: __init__.py  cli.py  main.py
backend/app/admin/: dashboard.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  db.py  enums.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  base.py  domain.py
backend/app/schemas/: __init__.py  actions.py  analytics.py  api.py  domain.py  workflows.py
backend/app/services/: analytics.py  campaigns.py  discovery.py  dispatch.py  drafts.py  evidence.py  lead_service.py  normalization.py  openclaw_jobs.py  provider_health.py  replies.py  routing.py  scoring.py  suppression.py
backend/app/workers/: __init__.py  (+2 more)
docs/: architecture.md  deployment.md  local-machine-setup.md  openclaw-hosting.md  setup.md
openclaw/: README.md  openclaw.json5.example
openclaw/local/: aperture.local.json5
openclaw/workflows/: contact-discovery.md  draft-email.md  draft-whatsapp.md  lead-enrichment.md  reply-classifier.md  site-audit.md
ops/: .env.example
ops/docker/: docker-compose.yml
ops/runtime/: aperture-openclaw.service.example  runbook.md
ops/windows/: probe-openclaw.ps1  setup-openclaw.ps1  start-pipeline-loop.ps1
website/: contact.html  index.html  process.html  services.html
website/assets/: app.js  styles.css
(+30 files in other folders)
